Stop wrapping and add today only events

--- a/DocDB/html/css/DocDBDocumentDatabase.css
+++ b/DocDB/html/css/DocDBDocumentDatabase.css
@@ -1,3 +1,4 @@
 .HomepageMainChoice {
   height: 2.5em;
+  white-space: nowrap;
 }  
